--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>Test HTML updated version</h1>
-<h2>Test HTML new version</h2>
+<h2>Test HTML new version 2.0</h2>
 </body>
 </html>
